# CastorIQ

./: .dump_presets.json  .env.example  .env.production.example  .gitignore  CLAUDE.md  COMMAND.md  LICENSE  README.md  SETUP_WINDOWS.md  agent_orchestrator.py  bash.exe.stackdump  conflict scan implementation spec.md  development-notes-2.md  manage.sh  opencode.json  patch_views.py  pyproject.toml
.claude/: settings.json
.claude/commands/: commands-context.md  commands-debug.md  commands-feature.md  commands-health.md  commands-review.md  commands-test.md  commands-writeback.md  worktree-db-cleanup.md  worktree-db.md
.claude/hooks/: ruff_on_edit.py
.claude/skills/: django-service.md  help-modals.md  htmx-patterns.md  ifcopenshell-ops.md  testing-skill.md  writeback-ops.md
.github/workflows/: ci.yml
docker/: Dockerfile  docker-compose.prod.yml  docker-compose.yml  init-db.sql  nginx.conf
docs/: architecture.md  byok-setup.md  castor_design_system.html  conflict-detection-specs.md  conventions.md  daily-guide.md  data-models.md  doc_check_playbook.md  dump_context_playbook.md  explore.md  facilities.md  history.md  ifc-processor.md  known-limitations.md  mockup.html  ocr-pipeline.md  prompt-template-compliance-doc-generation.md  prompting.md  rag-pipeline.md  schedule.md  setup.md  testing.md  ui-ux.md
docs/business/: VPS-extra-storage-setup.md  beta-release-notes.md  castor-screenplay-instructions.md  castor-screenplay.md  custom-bi.md  dry-run-checklist.md  launch-cleanup.md  live-roadmap.md  operator-toolkit.md  pre-beta-test-triage.md  public-alpha-barcelona-2026.md  public-beta-barcelona-2026.md  sentry-and-email.md  server-pulldown-runbook.md  server-setup.md  ssh-lockout-runbook.md  token-economics.md  vps-bringup-checklist.md  vps-deployment.md
docs/claude/: README-claude-commands.md  README-worktree.md
docs/fmp/: FMP-2nd-partial-submission.md
docs/metacastor/: D3-REFACTOR_PLAN.md  d1-eval-baseline.md  d2-skill-bank.md  d3-failure-memory.md  d4-finetuning-pipeline.md  d5-tier3-injection.md  overview.md
docs/old/: Castor_Final_Setup.md
docs/specs/: 7D-facility-management.md  7D-milestones.md  GLM-OCR-implementation-spec-V00.md  GLM-OCR-implementation-spec-V01.md  dynamic-context-window-management.md  llm-connection.md  meta-castor-design-brief-V00.md  meta-castor-design-brief-V01.md  meta-castor-design-brief-V02.md  next-2026-4-14-copy.md  next-2026-4-14.md  unified-file-upload-spec.md  writeback-performance-plan.md  writeback-streaming.md
docs/ui-mockup/: mockup.html
docs/writeback/: conflict-scan.md  guardian.md  overview.md  tier1-reference.md  tier2-reference.md  tier3-reference.md
fixtures/sample-project/: .gitignore  PROVENANCE.md  README.md  render_pdfs.py
fm-explore/: README.md  index.html
fm-explore/src/: main.js  state.js
scripts/: backup.sh  castor-health.sh  castor-precommit.sh  castor-stats.sh  castor_ui-mockup_3.html  check_ollama_tokens_usage.py  deploy.sh  extract_ifc_psets.py  generate-local-certs.sh  worktree_db_setup.sh
src/: PROJECT_CONTEXT.md  conftest.py  manage.py  notes.md  verify_audit_layer.py  verify_ml.py  write-back-core-funcs.md
src/_ifc_insights_tmp/: apps.py  models.py
src/_intelligence_tmp/: __init__.py  views.py
src/beta/: admin.py  apps.py  checks.py  models.py  throttle.py  urls.py  views.py
src/castor/: CHANGELOG.md  README.md  apps.py  manage.py  urls.py
src/chat/: admin.py  consumers.py  models.py  routing.py
src/config/: __init__.py  asgi.py  urls.py  wsgi.py
src/core/: admin.py  auth_backends.py  consumers.py  context_processors.py  crypto.py  exceptions.py  forms.py  http.py  llm.py  llm_catalog.py  llm_cloud_registry.py  llm_model_registry.py  logging_handlers.py  middleware.py  mixins.py  models.py  token_budget.py  token_utils.py  urls.py  views.py  views_byok.py  views_staff_dashboard.py
src/documents/: __init__.py  admin.py  apps.py  consumers.py  models.py  routing.py  signals.py
src/eastereggs/: CLAUDE.md  apps.py  registry.py  urls.py  (+1 more)
tests/: __init__.py  conftest.py  test_core.py
(+976 files in other folders)
