[project]
name = "castor"
version = "0.1.0"
description = "Bi-Directional LLM Assistant for IFC Models and Technical Reporting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.14",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2",
    "python-dotenv>=1.0",
    "ifcopenshell>=0.7",
    "langchain>=0.1",
    "langchain-community>=0.0.20",
    "langgraph>=0.0.20",
    "ollama>=0.1",
    "pypdf>=4.0",
    "python-docx>=1.1",
    "gitpython>=3.1",
    "httpx>=0.26",
    "django-extensions>=4.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "channels[daphne]>=4.3.2",
    "markdown>=3.10.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.7",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "pre-commit>=3.6",
    "ipython>=8.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/castor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "castor.settings.local"
python_files = ["test_*.py"]
addopts = "-v --tb=short"
