[project]
name = "castor"
version = "0.1.0"
description = "Bi-Directional LLM Assistant for IFC Models and Technical Reporting"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "django>=5.0",
    "djangorestframework>=3.14",
    "psycopg[binary]>=3.1",
    "pgvector>=0.2",
    "python-dotenv>=1.0",
    "ifcopenshell>=0.7",
    "langchain>=0.1",
    "langchain-community>=0.0.20",
    "langgraph>=0.0.20",
    "ollama>=0.1",
    "pypdf>=4.0",
    "docx2txt>=0.8",
    "python-docx>=1.1",
    "gitpython>=3.1",
    "httpx>=0.26",
    "django-extensions>=4.1",
    "langchain-ollama>=1.0.1",
    "langchain-text-splitters>=1.1.0",
    "channels[daphne]>=4.3.2",
    "markdown>=3.10.2",
    "pytest>=9.0.2",
    "pytest-django>=4.11.1",
    "factory-boy>=3.3.3",
    "pymupdf>=1.27.2.2",
    "pillow>=12.1.1",
    "openpyxl>=3.1.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-django>=4.7",
    "pytest-asyncio>=0.23",
    "pytest-cov>=4.1",
    "ruff>=0.2",
    "pre-commit>=3.6",
    "ipython>=8.20",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/castor"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings.local"
python_files = ["test_*.py"]
addopts = "-v --tb=short"
asyncio_mode = "auto"
testpaths = ["tests", "src"]
pythonpath = ["src"]
markers = [
    "slow: marks slow integration tests (deselect with '-m not slow')",
]

[tool.coverage.run]
omit = [
    # Auto-generated / structural boilerplate
    "*/migrations/*",
    "*/__init__.py",
    "*/apps.py",
    "*/urls.py",
    "manage.py",
    # Server entrypoints (no business logic)
    "*/config/wsgi.py",
    # Settings are configuration, not logic
    "*/config/settings/*",
    # Standalone dev scripts (not imported by the app)
    "scripts/*",
    # Large static lookup table — no logic to test
    "*/ifc_standard_psets.py",
    # Admin registrations — minimal or in skip list; no admin tests planned
    "*/admin.py",
    # Test infrastructure (fixtures, factories, conftest — not source code)
    "*/tests/__init__.py",
    "*/tests/conftest.py",
    "*/tests/factories.py",
    "tests/conftest.py",
    "tests/e2e/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[dependency-groups]
dev = [
    "playwright>=1.58.0",
    "pytest-asyncio>=1.3.0",
    "pytest-playwright>=0.7.2",
]
